correct song spacing, separate verses by paragraphs

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -35,6 +35,10 @@
 	display: none;
 }
 
+[epub|type~="z3998:song"] p + p{
+	margin-top: 1em;
+}
+
 p span.i1{
 	padding-left: 2em;
 	text-indent: -1em;
